2007-12-15  Badlop  <badlop@process-one.net>

	* src/mod_irc/mod_irc.erl: No need to translate copyright notice
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/msgs/*.msg: Likewise

	* contrib/extract_translations/prepare-translation.sh: Bugfix

2007-12-14  Badlop  <badlop@process-one.net>

	* src/msgs/*: Unified file format: First line is SVN Id
	tag. Second is Language name. Next lines are authors, adding the
	new ones on top. Each string must be in a single line (to
	facilitate the automatic removal of unused strings). Last four
	lines report file format for Emacs and Vim.
	
	* contrib/extract_translations/prepare-translation.sh: New
	features: extract all translations, include explanation for
	translators in the file, remove unused strings from file, include
	unused strings in a section for reference, provide information
	about current translation and number of missing strings, compress
	the files to a zip

	* contrib/extract_translations/extract_translations.erl: Reverted
	to the original version

2007-12-14  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_s2s_out.erl: Bugfix

2007-12-12  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: presence handler bugfix
	* src/mod_pubsub/node_default.erl: Allow send last item on presence
	
2007-12-12  Badlop  <badlop@process-one.net>

	* src/msgs/it.msg: Updated (thanks to Luca Brivio)

2007-12-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: notification broadcast bugfix

	* src/jlib.hrl: add pubsub namespace

2007-12-11  Badlop  <badlop@process-one.net>

	* src/msgs/tr.msg: New translation (thanks to Doruk Fisek)

	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

2007-12-10  Badlop  <badlop@process-one.net>
